--- a/www/index.html
+++ b/www/index.html
@@ -9,6 +9,9 @@
         <title>Guide Editor</title>
     </head>
     <body>
+
+        <div class="splash-screen"></div>
+
         <div class="app">
             <h1>Guide Editor</h1>
             <div id="deviceready" class="blink">
