--- a/www/index.html
+++ b/www/index.html
@@ -7,11 +7,11 @@
         <meta name="msapplication-tap-highlight" content="no">
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
         <link rel="stylesheet" type="text/css" href="css/index.css">
-        <title>Guide Editor</title>
+        <title>Cordova + Webpack</title>
     </head>
     <body>
         <div class="app">
-            <h1>Guide Editor</h1>
+            <h1>Cordova + Webpack</h1>
             <div id="deviceready" class="blink">
                 <p class="event listening">Connecting to Device</p>
                 <p class="event received">Device is Ready</p>
